k8s-resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trezlabs-admission
  labels:
    app: trezlabs-admission-control
spec:
  ports:
    - name: https
      protocol: TCP
      port: 8443
      targetPort: 8443
  selector:
    app: trezlabs-admission-control
