k8s-resources/solution.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "cert-policy.example.com"
webhooks:
- name: "cert-policy.example.com"
  rules:
  - apiGroups:   [""]
    apiVersions: ["v1"]
    operations:  ["*"]
    resources:   ["secrets"] # certificates
    # The scope field specifies if only cluster-scoped resources ("Cluster") or namespace-scoped resources ("Namespaced") will match this rule.
    #  "∗" means that there are no scope restrictions.
    scope: "*"
  clientConfig:
    service:
      name: "trezlabs-admission"
      namespace: "trezlabs"
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN0akNDQVo0Q0NRQ1U1U1lHdU1WVVhqQU5CZ2txaGtpRzl3MEJBUXNGQURBZE1Sc3dHUVlEVlFRRERCSjAKY21WNmJHRmljeTFoWkcxcGMzTnBiMjR3SGhjTk1qSXdNakF4TWpJeE1UVTFXaGNOTWpNd01qQXhNakl4TVRVMQpXakFkTVJzd0dRWURWUVFEREJKMGNtVjZiR0ZpY3kxaFpHMXBjM05wYjI0d2dnRWlNQTBHQ1NxR1NJYjNEUUVCCkFRVUFBNElCRHdBd2dnRUtBb0lCQVFEampVVGgvclFVbU1hT2NMSkF4aHFlemQrRGxRYm9IdTJRTEJzeFBJNUcKWEZxN2k2WG1GWmtrb0tGRXQ5a0I4OHBnSWtRYXV6NnVFQ2ttZ3JNdVQ0dnVRa2Vnd1g2eXFkTFc1WWZXdGtxcwpuRUdvZS9ycDJiS [...]
  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  timeoutSeconds: 5
